Hover on logout button

--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -39,6 +39,8 @@
     display: inline-block
     :visited
       color: #333333
+  #logout-button:hover
+    cursor: pointer
       
   #tagline, .hiring-call-to-action
     width: 100%
