10 pixel margin on photos

--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -126,6 +126,7 @@
           height: 50px
           border-radius: 5px
           overflow: hidden
+          margin-right: 10px
           
         .candidate-description
           width: 100%
