Fixed doober alignment

--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -67,7 +67,7 @@
   .reasons
     height: 275px
     margin-bottom: 25px
-    width: 100%
+    width: 100%    
 
     .information_row
       height: 150px
@@ -79,6 +79,7 @@
       padding-left: 3%
       height: 150px
       display: inline-block
+      vertical-align: top
     .employer_icon
       width: 125px
       margin: 0px auto
