added backwards compatability for border-image using modernizr

--- a/app/styles/play/level/tome/spell.sass
+++ b/app/styles/play/level/tome/spell.sass
@@ -26,8 +26,13 @@
     top: 0
     height: 100%
     width: 100%
+    
+  span.code-background
     border-width: 22px
     border-image: url(/images/level/code_editor_background.png) 22 fill round
+
+  img.code-background
+    display: none
 
   .save-status
     display: none
@@ -135,3 +140,11 @@
 
       .ace_searchbtn, .ace_replacebtn
         padding: 0px 4px
+
+html.no-borderimage
+  #spell-view
+    span.code-background
+      display: none
+    img.code-background
+      display: block
+
