--- a/app/templates/play/level/tome/spell.jade
+++ b/app/templates/play/level/tome/spell.jade
@@ -1,4 +1,4 @@
-//- img(src="/images/level/code_editor_background.png").code-background
+img(src="/images/level/code_editor_background.png").code-background
 span.code-background
     
 div.ace
