--- a/app/templates/play/level/tome/spell_palette.jade
+++ b/app/templates/play/level/tome/spell_palette.jade
@@ -1,4 +1,4 @@
-//- img(src="/images/level/code_palette_background.png").code-palette-background
+img(src="/images/level/code_palette_background.png").code-palette-background
 span.code-palette-background
 .code-language-logo
 ul(class="nav nav-pills" + (tabbed ? ' multiple-tabs' : ''))
