--- a/app/styles/play/level/tome/problem_alert.sass
+++ b/app/styles/play/level/tome/problem_alert.sass
@@ -6,8 +6,6 @@
   bottom: -120px
   left: 10px
   right: 10px
-  // background: transparent url(/images/level/code_editor_error_background.png) no-repeat
-  // background-size: 100% 100%
   background: transparent
   border: 0
   padding: 18px 35px 18px 14px
@@ -33,14 +31,28 @@
   //&.alert-error
 
   &.alert-warning
-    // background-image: url(/images/level/code_editor_warning_background.png)
     border-image-source: url(/images/level/code_editor_warning_background.png)
     
   &.alert-info
-    // background-image: url(/images/level/code_editor_info_background.png)
     border-image-source: url(/images/level/code_editor_info_background.png)
         
   &.alert-style
     // Do we ever want to do this for style?
-    // background-image: url(/images/level/code_editor_info_background.png)
     border-image-source: url(/images/level/code_editor_info_background.png)
+
+html.no-borderimage
+  .problem-alert
+    border-width: 0
+    border-image: none
+    background: transparent url(/images/level/code_editor_error_background.png) no-repeat
+    background-size: 100% 100%
+  
+    &.alert-warning
+      background-image: url(/images/level/code_editor_warning_background.png)
+      
+    &.alert-info
+      background-image: url(/images/level/code_editor_info_background.png)
+          
+    &.alert-style
+      // Do we ever want to do this for style?
+      background-image: url(/images/level/code_editor_info_background.png)
