--- a/app/styles/play/level/modal/docs.sass
+++ b/app/styles/play/level/modal/docs.sass
@@ -1,4 +1,4 @@
-#docs-modal .modal-dialog
+#docs-modal .modal-dialog, #settings-treema .treema-markdown
   width: 800px
   
   .tab-content
@@ -11,7 +11,7 @@
     display: block
     margin: 0 auto
     
-  em
+  img + em
     display: block
     margin: 0 auto
     text-align: center
