--- a/app/templates/user/achievements.jade
+++ b/app/templates/user/achievements.jade
@@ -1,1 +1,10 @@
 extends /templates/kinds/user
+
+block append content
+  .row
+    each achievement, index in achievements
+      - var title = achievement.get('name');
+      - var description = achievement.get('description');
+      - var imgURL = achievement.get('icon');
+      .col-sm-6.col-xs-12
+        include ../achievement_notify
