Widened the click area on the wizard settings view for color config.

--- a/app/templates/account/wizard_settings.jade
+++ b/app/templates/account/wizard_settings.jade
@@ -1,5 +1,5 @@
 #color-settings
-  table.table.table-bordered
+  table.table.table-bordered.table-hover
     tr
       th(data-i18n="wizard_settings.active") Active
       th(data-i18n="wizard_settings.color") Color
