--- a/app/templates/modal/wizard_settings.jade
+++ b/app/templates/modal/wizard_settings.jade
@@ -17,4 +17,4 @@ block modal-body-wait-content
   .progress-bar
 
 block modal-footer-content
-  button.btn.btn-primary.btn-large#wizard-settings-done(type="button") Done
+  button.btn.btn-primary.btn-large#wizard-settings-done(data-dismiss="modal", type="button") Done
