--- a/app/styles/account/wizard-settings.sass
+++ b/app/styles/account/wizard-settings.sass
@@ -8,9 +8,13 @@
   width: 450px
   margin: 0 auto
   
+  label
+    cursor: pointer
+  
   #color-settings table
     float: left
     width: 250px
+    cursor: pointer
     
   .minicolors-input
     display: none
