Various fixes to employer page/profile view

--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -17,15 +17,24 @@
     margin-bottom: 10px
     .panel-heading
       background-color: darkgrey
+      cursor: pointer
     .panel-body
       background-color: darkgrey
+      border-radius: 4px
+      border-top-left-radius: 0px
+      border-top-right-radius: 0px
+    .panel
+      border: 1px red
+      border-radius: 0px
      
   #filters
     .filter_section
-      width: 16%
+      width: 25%
       display: inline-block
       vertical-align: top
     margin-bottom: 10px
+    label input
+      margin-right: 10px
   .get-started-button
     vertical-align: text-bottom
     margin-left: 10px
