--- a/app/templates/account/profile.jade
+++ b/app/templates/account/profile.jade
@@ -155,7 +155,7 @@ block content
                   select.form-control(name='root[visa]')
                     option(value='Authorized to work in the US', selected=profile.visa == 'Authorized to work in the US') Authorized to work in the US
                     option(value='Need visa sponsorship', selected=profile.visa == 'Need visa sponsorship') Need visa sponsorship
-                  p.help-block(data-i18n="account_profile.basics_visa_help") Are you authorized to work in the US, or do you need visa sponsorship?
+                  p.help-block(data-i18n="account_profile.basics_visa_help") Are you authorized to work in the US, or do you need visa sponsorship? (If you live in Canada or Australia, mark authorized.)
                 .form-group
                   label.control-label(data-i18n="account_profile.basics_looking_for") Looking For
                   select.form-control(name='root[lookingFor]')
