--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -1,6 +1,6 @@
 #employers-view
 
-  button
+  .employer-button
     background: #fce232 /* Old browsers */
     background: -moz-linear-gradient(top, #fce232 0%, #ea8e2b 100%) 
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fce232), color-stop(100%,#ea8e2b))
@@ -42,13 +42,13 @@
   #filter-button, #create-alert-button
     float: right
     
-  #login-link, #logout-button
+  #login-link, #logout-link
     float: right
     color: #333333
     display: inline-block
     :visited
       color: #333333
-  #logout-button:hover
+  #logout-link:hover
     cursor: pointer
       
   #tagline, .hiring-call-to-action
