--- a/app/templates/employers.jade
+++ b/app/templates/employers.jade
@@ -7,10 +7,10 @@ block content
   if !isEmployer && !me.isAdmin()
     #tagline
       h1(data-i18n="employers.hire_developers_not_credentials") Hire developers, not credentials.
-      button.btn.get-started-button Get started
+      button.btn.get-started-button.employer-button Get started
   else
     if !me.get('anonymous')
-      a#logout-button(data-i18n="login.log_out") Logout
+      a#logout-link(data-i18n="login.log_out") Logout
       br
     #filter
       .panel-group#filter_panel
@@ -83,7 +83,7 @@ block content
                 
             //input#select_all_checkbox(type="checkbox" name="select_all" checked)
             //| Select all
-            button.btn#filter-button Filter
+            button.btn.employer-button#filter-button Filter
             p#results #{numberOfCandidates} results
             //button.btn#create-alert-button Create Alert
   if candidates.length
@@ -131,7 +131,7 @@ block content
     div#info_wrapper
       span.hiring-call-to-action
         h2#start-hiring(data-i18n="employers.start_hiring") Start hiring.
-        button.btn.get-started-button Get started
+        button.btn.get-started-button.employer-button Get started
       
       h2#hiring-reasons.hiring-call-to-action(data-i18n="employers.reasons") 3 reasons you should hire through us:
       .reasons#top_row
@@ -153,7 +153,7 @@ block content
           p(data-i18n="employers.pass_screen_blurb") All of these developers have ranked in our programming competitions. One employer found that 5x as many of our devs passed their technical screen than hiring from Hacker News.
       span.hiring-call-to-action
         h2(data-i18n="employers.make_hiring_easier") Make my hiring easier, please.
-        button.btn.get-started-button Get started
+        button.btn.get-started-button.employer-button Get started
       .reasons#bottom_row
         .reason_long
           img.employer_icon(src="/images/pages/employer/employer_icon1.png")
