Consolidated iOS and Android into Mobile Developer

--- a/app/templates/employers.jade
+++ b/app/templates/employers.jade
@@ -57,12 +57,8 @@ block content
                   | Software Developer
                 br
                 label
-                  input(type="checkbox" name="roleFilter" value="iOS Developer")
-                  | iOS Developer
-                br
-                label
-                  input(type="checkbox" name="roleFilter" value="Android Developer")
-                  | Android Developer
+                  input(type="checkbox" name="roleFilter" value="Mobile Developer")
+                  | Mobile Developer
               .filter_section#seniority_filter
                 h4 Seniority
                 label
