Revert "Consolidated iOS and Android into Mobile Developer"
This reverts commit eb109156ce6e3f20a9b739a500c9f327b0cf46e3.

--- a/app/templates/employers.jade
+++ b/app/templates/employers.jade
@@ -57,8 +57,12 @@ block content
                   | Software Developer
                 br
                 label
-                  input(type="checkbox" name="roleFilter" value="Mobile Developer")
-                  | Mobile Developer
+                  input(type="checkbox" name="roleFilter" value="iOS Developer")
+                  | iOS Developer
+                br
+                label
+                  input(type="checkbox" name="roleFilter" value="Android Developer")
+                  | Android Developer
               .filter_section#seniority_filter
                 h4 Seniority
                 label
