Various changes to education filter

--- a/app/templates/employers.jade
+++ b/app/templates/employers.jade
@@ -34,18 +34,14 @@ block content
                   input(type="checkbox" name="visa" value="Need visa sponsorship")
                   | Not Authorized
               .filter_section#school_filter
-                h4 School
+                h4 Education
                 label
-                  input(type="checkbox" name="schoolFilter" value="Top 20 Eng.")
-                  | Top 20 Eng.
+                  input(type="checkbox" name="schoolFilter" value="Top School")
+                  | Top School
                 br
                 label
-                  input(type="checkbox" name="schoolFilter" value="Other US")
-                  | Other US
-                br
-                label
-                  input(type="checkbox" name="schoolFilter" value="Other Intl.")
-                  | Other Intl.
+                  input(type="checkbox" name="schoolFilter" value="Other")
+                  | Other
               .filter_section#role_filter
                 h4 Role
                 label
