Table styling/ copy edit

--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -146,10 +146,21 @@
         margin-top: 10px
         padding-bottom: 5px
         padding-top: 10px
+      .candidate-name-cell
+        position: relative
+        top: 10px
+        //refactor later, bad practice
+        
+        
       .border_row
         border-bottom: 1px solid #d3d3d3
         vertical-align: bottom
-        padding-top: 0px
+        td
+          padding-top: 0px
+          padding-bottom: 5px
+      .description_row td
+        padding-bottom: 0px
+        padding-top: 15px
       
   #results
     display: inline-block
